go/cmd/http-test-server/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-server-gateway
  namespace: prime
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - server.apps.ocp.oswee.com
      # tls:
      #   httpRedirect: true
    # - port:
      #   number: 443
      #   name: https-443
      #   protocol: https
      # hosts:
      #   - server.apps.ocp.oswee.com
      # tls:
      #   mode: SIMPLE
      #   credentialName: my-tls-secret
